# honeycomb

./: .dockerignore  .env.example  .gitignore  CONTEXT.md  Dockerfile.api  Dockerfile.worker  OPENCLAW_AGENT_CREATION.md  README.md  SETUP.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
apps/desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-app/src-tauri/src/: main.rs
docs/: BOUNDARIES.md  PROJECT_STRUCTURE.md  backend-roadmap.md  cross-platform-plan.md  desktop-installer-notes.md  experience-memory.md  job-cancellation-semantics.md  m3-real-planner-known-issues.md  m3-real-provider-operator-guide.md  openclaw-agent-creation.md  owner-tryout.md  release-checklist.md
openclaw/: README.md
scripts/: check-no-secrets.ts  check-package-layout.ts  cleanup-expired-sessions.ts  create-desktop-shortcut.ps1  generate-honeycomb-icon.ps1  git-push.ps1  honeycomb-api-token.ps1  launch-desktop-app.ps1  patch-openclaw-ark-media.ps1  run-with-smoke-lock.ps1  smoke-agent-model-config.ps1  smoke-cancel-job.ps1  smoke-desktop-ui.ts  smoke-docker-compose.ps1  smoke-feishu-webhook.ps1  smoke-http-only-end-to-end.ps1  smoke-list-jobs.ps1  smoke-m2-recovery.ps1  smoke-m3-real-provider.ps1  smoke-openclaw-real.ps1  smoke-openclaw-runtime-control.ps1  smoke-runtime-usage-cost.ps1  smoke-tauri-shell.ps1  smoke-web-search-browser.ps1  start-desktop-tryout.ps1  start-dev.ps1  start-owner-tryout.ps1  stop-dev.ps1  stop-owner-tryout.ps1
tests/: network-policy.test.ts  openclaw-runtime-control.test.ts  pricing-policy.test.ts  provider-inference.test.ts  (+1 more)
(+42 files in other folders)
