[package]
name = "honeycomb"
version = "0.1.0"
description = "Honeycomb desktop shell"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "native-tls"] }
